@@ -2,6 +2,9 @@
  
 * From now jsload, cssload and anyload suport arrays.
 
+* Added ability to move scrollbar, when Home and
+End buttons pressed.
+
 
 2012.08.06, Version 0.1.5
 
